<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <groupId>dev.khbd.result4j</groupId>
    <artifactId>result4j</artifactId>
    <packaging>pom</packaging>
    <version>0.0.2_jre17</version>

    <modelVersion>4.0.0</modelVersion>

    <modules>
        <module>result4j-core</module>
        <module>result4j-processor</module>
    </modules>

    <name>Result4j</name>
    <description>Result4j is a simple library with common data types like Option, Either, etc.</description>

    <url>https://github.com/kh-bd/result4j</url>

    <licenses>
        <license>
            <name>The Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>skhadanovich</id>
            <name>Sergei Khadanovich</name>
            <email>khadanovich.sergey@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:kh-bd/result4j.git</connection>
        <developerConnection>scm:git:ssh://github.com:kh-bd/result4j.git</developerConnection>
        <url>https://github.com/kh-bd/result4j/tree/main</url>
    </scm>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- plugins versions -->
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
        <maven-surefire-plugin.version>3.0.0-M7</maven-surefire-plugin.version>
        <maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
        <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
        <maven-assembly-plugin.version>3.4.2</maven-assembly-plugin.version>
        <maven-deploy-plugin.version>3.0.0</maven-deploy-plugin.version>

        <!-- dependencies versions -->
        <lombok.version>1.18.30</lombok.version>

        <testng.version>7.7.1</testng.version>
        <assertj.version>3.23.1</assertj.version>
        <mockito.version>4.8.1</mockito.version>

        <!-- opens -->
        <open.tree>jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</open.tree>
        <open.util>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</open.util>
        <open.api>jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</open.api>
        <open.parser>jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</open.parser>
        <open.code>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</open.code>
        <open.comp>jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</open.comp>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- internal dependencies -->
            <dependency>
                <groupId>dev.khbd.result4j</groupId>
                <artifactId>result4j-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.khbd.result4j</groupId>
                <artifactId>result4j-processor</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
                <scope>provided</scope>
            </dependency>

            <!-- test dependencies -->
            <dependency>
                <groupId>org.testng</groupId>
                <artifactId>testng</artifactId>
                <version>${testng.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <target>17</target>
                    <source>17</source>
                    <fork>true</fork>
                    <compilerArgs>
                        <arg>--add-exports=${open.tree}</arg>
                        <arg>--add-exports=${open.util}</arg>
                        <arg>--add-exports=${open.api}</arg>
                        <arg>--add-exports=${open.parser}</arg>
                        <arg>--add-exports=${open.code}</arg>
                        <arg>--add-exports=${open.comp}</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <argLine>-Dfile.encoding=UTF-8 --add-exports=${open.tree} --add-exports=${open.util} --add-exports=${open.api} --add-exports=${open.parser} --add-exports=${open.code} --add-exports=${open.comp}</argLine>
                    <useSystemClassLoader>false</useSystemClassLoader>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <source>17</source>
                            <additionalJOptions>
                                <additionalJOption>--add-exports</additionalJOption>
                                <additionalJOption>${open.tree}</additionalJOption>
                                <additionalJOption>--add-exports</additionalJOption>
                                <additionalJOption>${open.util}</additionalJOption>
                                <additionalJOption>--add-exports</additionalJOption>
                                <additionalJOption>${open.api}</additionalJOption>
                                <additionalJOption>--add-exports</additionalJOption>
                                <additionalJOption>${open.parser}</additionalJOption>
                                <additionalJOption>--add-exports</additionalJOption>
                                <additionalJOption>${open.code}</additionalJOption>
                                <additionalJOption>--add-exports</additionalJOption>
                                <additionalJOption>${open.comp}</additionalJOption>
                            </additionalJOptions>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

    <profiles>
        <profile>
            <id>sign</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>${maven-gpg-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                                <configuration>
                                    <gpgArguments>
                                        <arg>--pinentry-mode</arg>
                                        <arg>loopback</arg>
                                    </gpgArguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
